# chess_bevy

./: .gitignore  Cargo.toml
.cargo/: .config.toml
src/: board.rs  config.rs  game.rs  main.rs  pieces.rs  resource_allocation.rs  shapes.rs
